--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 17:05:03 2018</p>
+         Last Run: Wed Nov 28 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -31,38 +31,38 @@
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
-                        <td>-2</td>
+                        <td>-1</td>
                         <td>-5</td>
                         <td>0</td>
-                        <td>70</td>
+                        <td>61</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>13</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>2</td>
+                        <td>0</td>
                         <td>70</td>
                         <td>0</td>
                         <td>10</td>
                         <td>W</td>
-                        <td>4</td>
+                        <td>1</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
                         <td>Clear</td>
                         <td>-4</td>
-                        <td>-7</td>
-                        <td>2</td>
-                        <td>72</td>
+                        <td>-8</td>
+                        <td>1</td>
+                        <td>71</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>2</td>
                      </tr>
                   </tbody>
                </table>
@@ -91,7 +91,7 @@
                "data":[
                  "-5",
                  "-7",
-                 "-7"
+                 "-8"
                ]
              },
              {
@@ -101,7 +101,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-2",
+                 "-1",
                  "-3",
                  "-4"
                ]
@@ -161,8 +161,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "2",
-                 "2"
+                 "0",
+                 "1"
                ]
              },
              {
@@ -171,9 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "61",
                  "70",
-                 "70",
-                 "72"
+                 "71"
                ]
              },
              {
@@ -182,9 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "4",
-                 "5"
+                 "3",
+                 "1",
+                 "2"
                ]
              }
            ]
@@ -225,7 +225,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 17:05:03 2018</p>
+         Last Run: Wed Nov 28 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -249,36 +249,36 @@
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>12</td>
-                        <td>81</td>
+                        <td>24</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>91</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>9</td>
-                        <td>77</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>10</td>
                         <td>N</td>
-                        <td>91</td>
+                        <td>97</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Overcast</td>
                         <td>-3</td>
                         <td>-7</td>
-                        <td>10</td>
-                        <td>77</td>
+                        <td>24</td>
+                        <td>75</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>90</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -376,9 +376,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "12",
-                 "9",
-                 "10"
+                 "24",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -387,9 +387,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "81",
-                 "77",
-                 "77"
+                 "79",
+                 "76",
+                 "75"
                ]
              },
              {
@@ -398,9 +398,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "91",
-                 "91",
-                 "90"
+                 "97",
+                 "97",
+                 "97"
                ]
              }
            ]
@@ -440,7 +440,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 17:05:03 2018</p>
+         Last Run: Wed Nov 28 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -468,8 +468,8 @@
                         <td>81</td>
                         <td>0</td>
                         <td>6</td>
-                        <td>NNE</td>
-                        <td>95</td>
+                        <td>N</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -477,23 +477,23 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>22</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>95</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Overcast</td>
+                        <td>Snow Showers</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>19</td>
-                        <td>72</td>
+                        <td>33</td>
+                        <td>73</td>
                         <td>0</td>
-                        <td>6</td>
-                        <td>NNE</td>
-                        <td>94</td>
+                        <td>8</td>
+                        <td>N</td>
+                        <td>92</td>
                      </tr>
                   </tbody>
                </table>
@@ -593,7 +593,7 @@
                "data":[
                  "24",
                  "22",
-                 "19"
+                 "33"
                ]
              },
              {
@@ -603,8 +603,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "76",
-                 "72"
+                 "77",
+                 "73"
                ]
              },
              {
@@ -613,9 +613,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "95",
-                 "95",
-                 "94"
+                 "93",
+                 "93",
+                 "92"
                ]
              }
            ]
@@ -655,7 +655,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 17:05:03 2018</p>
+         Last Run: Wed Nov 28 18:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -680,35 +680,35 @@
                         <td>-8</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>48</td>
+                        <td>34</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-9</td>
                         <td>-14</td>
-                        <td>7</td>
+                        <td>6</td>
                         <td>81</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>40</td>
+                        <td>24</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>-10</td>
                         <td>-15</td>
-                        <td>7</td>
-                        <td>85</td>
+                        <td>6</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>36</td>
+                        <td>20</td>
                      </tr>
                   </tbody>
                </table>
@@ -807,8 +807,8 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "7",
-                 "7",
-                 "7"
+                 "6",
+                 "6"
                ]
              },
              {
@@ -817,9 +817,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "81",
-                 "85"
+                 "83"
                ]
              },
              {
@@ -828,9 +828,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "48",
-                 "40",
-                 "36"
+                 "34",
+                 "24",
+                 "20"
                ]
              }
            ]
