--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 20:05:06 2018</p>
+         Last Run: Wed Nov 28 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -29,28 +29,16 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>09:00 PM</td>
+                        <td>10:00 PM</td>
                         <td>Clear</td>
                         <td>0</td>
                         <td>-4</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>14</td>
                         <td>W</td>
-                        <td>5</td>
-                     </tr>
-                     <tr>
-                        <td>10:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
-                        <td>0</td>
-                        <td>58</td>
-                        <td>0</td>
-                        <td>13</td>
-                        <td>W</td>
-                        <td>5</td>
+                        <td>17</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -58,11 +46,11 @@
                         <td>-2</td>
                         <td>-6</td>
                         <td>0</td>
-                        <td>61</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>13</td>
                         <td>W</td>
-                        <td>5</td>
+                        <td>14</td>
                      </tr>
                   </tbody>
                </table>
@@ -77,7 +65,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 PM",
              "10:00 PM",
              "11:00 PM"
            ],
@@ -90,7 +77,6 @@
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
                  "-4",
-                 "-5",
                  "-6"
                ]
              },
@@ -102,7 +88,6 @@
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
                  "0",
-                 "-1",
                  "-2"
                ]
              }
@@ -149,7 +134,6 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "09:00 PM",
              "10:00 PM",
              "11:00 PM"
            ],
@@ -161,7 +145,6 @@
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
                  "0"
                ]
              },
@@ -171,9 +154,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56",
-                 "58",
-                 "61"
+                 "53",
+                 "59"
                ]
              },
              {
@@ -182,9 +164,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "5",
-                 "5",
-                 "5"
+                 "17",
+                 "14"
                ]
              }
            ]
@@ -225,7 +206,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 20:05:06 2018</p>
+         Last Run: Wed Nov 28 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
@@ -253,7 +234,7 @@
                         <td>79</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>N</td>
+                        <td>NNE</td>
                         <td>97</td>
                      </tr>
                      <tr>
@@ -274,7 +255,7 @@
                         <td>-3</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>76</td>
+                        <td>77</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -389,7 +370,7 @@
                "data":[
                  "79",
                  "76",
-                 "76"
+                 "77"
                ]
              },
              {
@@ -440,7 +421,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 20:05:06 2018</p>
+         Last Run: Wed Nov 28 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -469,7 +450,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -477,11 +458,11 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>24</td>
-                        <td>78</td>
+                        <td>77</td>
                         <td>0</td>
-                        <td>8</td>
+                        <td>6</td>
                         <td>N</td>
-                        <td>94</td>
+                        <td>93</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
@@ -489,7 +470,7 @@
                         <td>-4</td>
                         <td>-7</td>
                         <td>33</td>
-                        <td>73</td>
+                        <td>72</td>
                         <td>0</td>
                         <td>8</td>
                         <td>N</td>
@@ -603,8 +584,8 @@
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
                  "81",
-                 "78",
-                 "73"
+                 "77",
+                 "72"
                ]
              },
              {
@@ -613,8 +594,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "94",
-                 "94",
+                 "93",
+                 "93",
                  "93"
                ]
              }
@@ -655,7 +636,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 20:05:06 2018</p>
+         Last Run: Wed Nov 28 21:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
@@ -680,7 +661,7 @@
                         <td>-8</td>
                         <td>-13</td>
                         <td>7</td>
-                        <td>80</td>
+                        <td>79</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -696,7 +677,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>11:00 PM</td>
@@ -704,7 +685,7 @@
                         <td>-10</td>
                         <td>-15</td>
                         <td>6</td>
-                        <td>84</td>
+                        <td>83</td>
                         <td>0</td>
                         <td>10</td>
                         <td>WNW</td>
@@ -817,9 +798,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "80",
+                 "79",
                  "81",
-                 "84"
+                 "83"
                ]
              },
              {
@@ -829,7 +810,7 @@
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
                  "34",
-                 "22",
+                 "23",
                  "17"
                ]
              }
