--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 22:05:02 2018</p>
-               <H1 style="color:rgb(0,0,0)" class="text-center">Practice - SWU Complex</H1>
-               <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Nov 28, 2018 -  9:15PM til 10:45PM</H4>
+         Last Run: Wed Nov 28 23:05:02 2018</p>
+               <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills WFC 16 - Foothills Boardwalk Field</H1>
+               <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Dec 01, 2018 -  1:50PM til  2:50PM</H4>
                <table class="table table-striped">
                   <thead>
                      <tr>
@@ -29,16 +29,40 @@
                   </thead>
                   <tbody>
                      <tr>
-                        <td>11:00 PM</td>
-                        <td>Clear</td>
-                        <td>-1</td>
-                        <td>-5</td>
+                        <td>01:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>24</td>
+                        <td>79</td>
                         <td>0</td>
-                        <td>56</td>
+                        <td>10</td>
+                        <td>N</td>
+                        <td>97</td>
+                     </tr>
+                     <tr>
+                        <td>02:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>24</td>
+                        <td>76</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>W</td>
-                        <td>15</td>
+                        <td>N</td>
+                        <td>97</td>
+                     </tr>
+                     <tr>
+                        <td>03:00 PM</td>
+                        <td>Overcast</td>
+                        <td>-3</td>
+                        <td>-7</td>
+                        <td>24</td>
+                        <td>77</td>
+                        <td>0</td>
+                        <td>10</td>
+                        <td>NNE</td>
+                        <td>97</td>
                      </tr>
                   </tbody>
                </table>
@@ -53,7 +77,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator1").getContext("2d");
                   var data ={
            "labels":[
-             "11:00 PM"
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
            ],
            "datasets":[
              {
@@ -63,7 +89,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "backgroundColor":"rgba(92,0,141,0)",
                "data":[
-                 "-5"
+                 "-7",
+                 "-7",
+                 "-7"
                ]
              },
              {
@@ -73,7 +101,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "backgroundColor":"rgba(252,49,18,0)",
                "data":[
-                 "-1"
+                 "-3",
+                 "-3",
+                 "-3"
                ]
              }
            ]
@@ -119,7 +149,9 @@
                   var ctx = document.getElementById("chartHTMLReportGenerator2").getContext("2d");
                   var data ={
            "labels":[
-             "11:00 PM"
+             "01:00 PM",
+             "02:00 PM",
+             "03:00 PM"
            ],
            "datasets":[
              {
@@ -128,7 +160,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0"
+                 "24",
+                 "24",
+                 "24"
                ]
              },
              {
@@ -137,7 +171,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "56"
+                 "79",
+                 "76",
+                 "77"
                ]
              },
              {
@@ -146,7 +182,9 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "15"
+                 "97",
+                 "97",
+                 "97"
                ]
              }
            ]
@@ -181,13 +219,12 @@
                      options: options
                   });
                </script>
-         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 22:05:02 2018</p>
+         Last Run: Wed Nov 28 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Dec 02, 2018 - 12:30PM til  2:00PM</H4>
                <table class="table table-striped">
@@ -216,7 +253,7 @@
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -228,14 +265,14 @@
                         <td>0</td>
                         <td>6</td>
                         <td>N</td>
-                        <td>93</td>
+                        <td>94</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
-                        <td>Snow Showers</td>
+                        <td>Overcast</td>
                         <td>-4</td>
                         <td>-7</td>
-                        <td>33</td>
+                        <td>24</td>
                         <td>72</td>
                         <td>0</td>
                         <td>8</td>
@@ -340,7 +377,7 @@
                "data":[
                  "24",
                  "24",
-                 "33"
+                 "24"
                ]
              },
              {
@@ -360,8 +397,8 @@
                "borderWidth":2,
                "backgroundColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "93",
-                 "93",
+                 "94",
+                 "94",
                  "93"
                ]
              }
@@ -402,7 +439,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Nov 28 22:05:02 2018</p>
+         Last Run: Wed Nov 28 23:05:02 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Dec 03, 2018 -  9:15PM til 10:45PM</H4>
                <table class="table table-striped">
